-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.820 2010-11-16 17:07:57 guru Exp $
-----------------------------------------------------------------------------------------

2010-11-16	pwessel
	* gmt_plot.c:	Tried to free an unallocated array in GMT_draw_custom_symbol
	
2010-11-15	pwessel
	* grdproject.c:	Now assign proper x/y units.

2010-11-12	pwessel
	* spotter/rotconverter.c:	Forgot to skip args when -N or -S was used.

2010-11-10	pwessel
	* nearneighbor.c:	Changed default to a more reasonable -N4/2.
	
2010-11-05	jluis
	* meca/utilmeca.c:	Fix bug affecting the plot of P & T axis

2010-11-05	pwessel
	* blockmean.txt:	Referred to unknown -D option.

2010-11-04	remko
	* meca/*.txt:		Replaced .IP with .TP
	* configure.ac:		Updated to version 4.5.6

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.5 finalized and released. GMT 5.0.0alpha announced, get via cvs
	NOTE: Windows binaries are built with VC2010 and will not run on older Windows
	versions prior to Windows XP SP2.
-----------------------------------------------------------------------------------------

2010-11-01	pwessel
	* Missing html:		gmt_shell_functions, gmtcolors, gmtget, gmtlogo
				img2google, isogmt, psbbox, sphdistance
				sphinterpolate, sphtriangulate, x2sys_merge
	* A few source files had DOS line endings by mistake
	* Some Makefiles were not 100% GNU portable under Solaris 8.

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.4 finalized, placed on ftp, but not announced yet.  However, there were
	  a few issues we had to address, hence skipping to 4.5.5 immediately.
-----------------------------------------------------------------------------------------
	
2010-10-29	pwessel
	* ex??/job??.[c]sh:	Many used awk instead of $AWK

2010-10-28	pwessel